docs/operations/kyverno.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: jenkins-build-node-assign
spec:
  rules:
    - name: jenkins-build-node-assign
      match:
        any:
          - resources:
              kinds:
                - /v1/Pod
              namespaces: [jenkins-build]
      mutate:
        patchStrategicMerge:
          spec:
            affinity:
              nodeAffinity:
                requiredDuringSchedulingIgnoredDuringExecution:
                  nodeSelectorTerms:
                    - matchExpressions:
                        - key: reserved-node
                          operator: In
                          values:
                            - jenkins-build
            tolerations:
              - key: reserved-node
                operator: Equal
                value: jenkins-build
                effect: NoSchedule
